# spikeinterface-airspeed-velocity-benchmarks

./: .gitignore  README.md  asv.conf.json  hashestobenchmark.txt  index.json  info.json  pyproject.toml  regressions.json  regressions.xml
.github/workflows/: run_benchmarks.yml
benchmarks/: benchmarks.py
graphs/arch-x86_64/branch-main/cpu-AMD Ryzen 9 6900HX with Radeon Graphics/machine-h-laptop/num_cpu-16/os-Linux 5.19.0-40-generic/python-3.10/ram-32033588/: benchmarks.IoSuite.time_write_binary.json  summary.json
graphs/arch-x86_64/branch-main/cpu-AMD Ryzen 9 6900HX with Radeon Graphics/machine-h-laptop/num_cpu-16/os-Linux 5.19.0-40-generic/python-3.11/ram-32033588/: benchmarks.IoSuite.time_write_binary.json  summary.json
graphs/summary/: benchmarks.ImportSuite.timeraw_import_comparison.json  benchmarks.ImportSuite.timeraw_import_core.json  benchmarks.ImportSuite.timeraw_import_exporters.json  benchmarks.ImportSuite.timeraw_import_extractors.json  benchmarks.ImportSuite.timeraw_import_full.json  benchmarks.ImportSuite.timeraw_import_postprocessing.json  benchmarks.ImportSuite.timeraw_import_preprocessing.json  benchmarks.ImportSuite.timeraw_import_qualitymetrics.json  benchmarks.ImportSuite.timeraw_import_sortingcomponents.json  benchmarks.ImportSuite.timeraw_import_spikeinterface.json  benchmarks.ImportSuite.timeraw_import_widgets.json  benchmarks.IoSuite.time_write_binary.json
src/spikeinterface_airspeed_velocity_benchmarks/benchmarks/: benchmarks.py
(+6 files in other folders)
